Add information on missing and expected docker containers